[package]
name = "ghfs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = { version = "0.17", features = ["experimental"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
